2001-04-30  Martin Baulig  <baulig@suse.de>

	* gnomemarshal.list, gnomemarshal-main.c: Moved to libgnome.

2001-04-29  Martin Baulig  <baulig@suse.de>

	* gnome-dock*.[ch]: Removed; use BonoboDock instead.

	* gnome-app.[ch], gnome-app-helper.[ch], gnome-appbar.[ch],
	gnome-stock.[ch]: Removed.

2001-04-29  Martin Baulig  <baulig@suse.de>

	* Makefile.am, libgnomeui.h: Moved all temporarily disabled
	stuff to a new `unused_SOURCES' target and #ifdef FIXME them
	in libgnome.h.

2001-04-29  Martin Baulig  <baulig@suse.de>

	Temporarily removed gnome-helpsys, gnome-popup-menu,
	gnome-popup-help and gnome-textfu from the build.

	* Makefile.am (libgnomeui_2_la_SOURCES): Removed
	gnome-helpsys.c, gnome-popup-menu.c, gnome-popup-help.c,
	gnome-textfu.c, gnome-pouchP.h.

2001-04-29  Martin Baulig  <baulig@suse.de>

	* gnome-ditem.c: Use BonoboWindow, not GnomeApp.

2001-04-29  Martin Baulig  <baulig@suse.de>

	Temporarily removed GnomeMDI from the build so that we can
	get rid of gnome-app.[ch] and gnome-app-helper.[ch].

	As a weekend hack project, someone needs to make GnomeMDI
	use the Bonobo UI code; contact me if you want to work on
	this, I can help you with it and I may even have some
	experimental code on my hard disk.

	* Makefile.am (libgnomeui_2_la_SOURCES): Removed gnome-mdi.c,
	gnome-mdiP.h, gnome-mdi-child.c, gnome-mdi-session.c,
	gnome-pouch.c, gnome-roo.c.

2001-04-29  Martin Baulig  <baulig@suse.de>

	* gnome-preferences.[ch]: Removed. This is now in libgnome
	and using bonobo-conf.

2001-04-29  Martin Baulig  <baulig@suse.de>

	* gnome-canvas-init.c (libgnomecanvas_pre_args_parse):
	There is no libgnomecanvas_init() function anymore.

2001-04-29  Martin Baulig  <baulig@suse.de>

	* gnome-mdi.[ch]: Made this a GObject, not a GtkObject.

2001-04-29  Martin Baulig  <baulig@suse.de>

	* gnome-app-helper.c, gnome-druid.c, gnome-font-picker.c,
	gnome-helpsys.c: Use the GTK+ API to access our stock icons.
