@@ -1,5 +1,16 @@
 2001-04-30  Martin Baulig  <baulig@suse.de>
 
+	* gnome-selector-client.[ch]: New files.
+	(GnomeSelectorClient): This is derived from BonoboWidget and
+	is the client side wrapper for a GNOME::Selector CORBA object.
+
+	* gnome-entry.h (GnomeEntry): Derive this from GnomeSelectorClient.
+	(gnome_entry_construct_from_selector): New function.
+
+	* gnome-boxed.defs (GnomeSelectorAsyncHandle): Removed.
+
+2001-04-30  Martin Baulig  <baulig@suse.de>
+
 	* gnomemarshal.list, gnomemarshal-main.c: Moved to libgnome.
 
 2001-04-29  Martin Baulig  <baulig@suse.de>
